aplicamos flask wtf para prevenir el csrf, en py lo importe, en html  guarde los tokens como metadatos y asi los envia a javascript

--- a/templates/index/indexiniciarsesion.html
+++ b/templates/index/indexiniciarsesion.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Inicio de Sesión - CET</title>
   <link rel="stylesheet" href="/static/css/estiloiniciarsesion.css"/>
+  <meta name="csrf-token" content="{{ csrf_token() }}">
 </head>
 <body>
 
