--- a/templates/index/ComentariosParaTodos.html
+++ b/templates/index/ComentariosParaTodos.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Comentarios con Menú</title>
   <link rel="stylesheet" href="/static/css/indexcajacomentario.css" />
-   <link rel="stylesheet" href="/static/css/barralateral.css"/>
+  <link rel="stylesheet" href="/static/css/barralateral.css"/>
+  <meta name="csrf-token" content="{{ csrf_token() }}">
 </head>
 <body>
   <div id="toggle">
