puse el <meta name="csrf-token" content="{{ csrf_token() }}"> en todos los htmls q ingresan info

--- a/templates/index/ComentariosParaTodos.html
+++ b/templates/index/ComentariosParaTodos.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/static/css/indexcajacomentario.css" />
    <link rel="stylesheet" href="/static/css/barralateral.css"/>
    <link rel="stylesheet" href="/static/css/ApartadoFuentes.css"/>
+   <meta name="csrf-token" content="{{ csrf_token() }}">
 </head>
 <body>
   <div id="toggle">
