--- a/templates/index/indexiniciarsesion.html
+++ b/templates/index/indexiniciarsesion.html
@@ -22,11 +22,13 @@
       <h1 id="login-title">¡BIENVENIDO DE VUELTA!</h1>
 
       <form id="loginForm">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+
         <label for="email" class="sr-only">Correo electrónico</label>
-        <input type="email" id="email" placeholder="INGRESE SU CORREO ELECTRONICO" required />
+        <input type="email" id="email" name="email" placeholder="INGRESE SU CORREO ELECTRONICO" required />
 
         <label for="password" class="sr-only">Contraseña</label>
-        <input type="password" id="password" placeholder="CONTRASEÑA" required />
+        <input type="password" id="password" name="password" placeholder="CONTRASEÑA" required />
 
         <div class="links">
           <a href="#">¿OLVIDÓ SU CONTRASEÑA? RECUPERAR</a>
